Fix widht for region block in header on mobile versiton.

--- a/local/templates/.default/css/main.css
+++ b/local/templates/.default/css/main.css
@@ -9452,4 +9452,8 @@ span.bread-crumbs__link {
     .header .region__description {
         display: inline-block;
     }
+    
+    .header .region {
+        width: 190px !important;
+    }
 }
